--- a/index.html
+++ b/index.html
@@ -18,40 +18,36 @@
       flex-direction: column;
       transition: background 1s ease;
     }
-
     h1, p, button {
       text-align: center;
       color: #b3003c;
     }
-
     h1 {
       font-family: 'Dancing Script', cursive;
       font-size: 2.5rem;
     }
-
     .hidden {
       display: none;
     }
-
-    .hearts {
+    .hearts, .confetti {
       position: fixed;
       width: 100%;
       height: 100%;
       pointer-events: none;
       z-index: -1;
     }
-
+    .heart, .confetti-piece {
+      position: absolute;
+      border-radius: 50%;
+      animation: float 5s infinite;
+    }
     .heart {
       width: 20px;
       height: 20px;
-      position: absolute;
       background-color: red;
       transform: rotate(45deg);
-      animation: float 5s infinite;
     }
-
-    .heart::before,
-    .heart::after {
+    .heart::before, .heart::after {
       content: '';
       width: 20px;
       height: 20px;
@@ -59,28 +55,29 @@
       position: absolute;
       border-radius: 50%;
     }
-
     .heart::before {
       top: -10px;
       left: 0;
     }
-
     .heart::after {
       left: -10px;
       top: 0;
     }
-
-    @keyframes float {
-      0% {
-        transform: translateY(0) rotate(45deg);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-100vh) rotate(45deg);
-        opacity: 0;
-      }
+    .confetti-piece {
+      width: 10px;
+      height: 10px;
+      background-color: #ff4d6d;
+      opacity: 0.8;
+      animation: confetti-fall 1.5s ease-out forwards;
     }
-
+    @keyframes float {
+      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
+      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
+    }
+    @keyframes confetti-fall {
+      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+    }
     button {
       padding: 12px 24px;
       font-size: 1rem;
@@ -88,95 +85,96 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: transform 0.2s, background 0.3s;
     }
-
     button:hover {
       background-color: #e6004c;
+      transform: scale(1.05);
     }
-
     .question {
       max-width: 90%;
       text-align: center;
       font-size: 1.2rem;
+      animation: fadeIn 0.5s ease;
     }
-
     .options button {
       display: block;
       margin: 10px auto;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="hearts" id="hearts"></div>
+  <div class="confetti" id="confetti"></div>
   <h1 id="title">Clique aqui para começar</h1>
   <button id="startBtn">Começar</button>
   <audio id="bgm" src="music.mp3" loop></audio>
-
   <div id="content" class="hidden">
     <div id="step"></div>
   </div>
-
   <script>
     const startBtn = document.getElementById('startBtn');
     const title = document.getElementById('title');
     const content = document.getElementById('content');
     const stepDiv = document.getElementById('step');
     const audio = document.getElementById('bgm');
-
+    const confetti = document.getElementById('confetti');
     const steps = [
       {
         text: `Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
         Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?`,
-        options: [
-          '🍷 Vinho',
-          '🍺 Cerveja',
-          'Caipirinha/Gin'
-        ]
+        options: ['🍷 Vinho', '🍺 Cerveja', 'Caipirinha/Gin']
       },
       {
         text: `Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?`,
-        options: [
-          'Risoto de camarão',
-          'Nhoque ao molho de tomate e manjericão'
-        ]
+        options: ['Risoto de camarão', 'Nhoque ao molho de tomate e manjericão']
       },
       {
         text: `E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?`,
-        options: [
-          'Fondue de chocolate',
-          '🤫 Sobremesa surpresa'
-        ]
+        options: ['Fondue de chocolate', '🤫 Sobremesa surpresa']
       },
       {
         text: 'Anotado!',
         options: []
       },
       {
-        text: 'Agora é só acender a vela que está na caixa e curtir o momento...<br><strong>Te amo! ❤️</strong>',
+        text: 'Agora é só acender a vela que está na caixa e curtir o momento...<br><br><strong>Te amo! ❤️</strong><br><br><button onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">Te amo!</button>',
         options: []
       }
     ];
-
     let stepIndex = 0;
-
     function renderStep() {
       const step = steps[stepIndex];
       stepDiv.innerHTML = `
         <p class="question">${step.text}</p>
         <div class="options">
-          ${step.options.map(opt => `<button onclick="nextStep()">${opt}</button>`).join('')}
+          ${step.options.map(opt => `<button onclick="handleOptionClick()">${opt}</button>`).join('')}
         </div>
       `;
     }
-
-    function nextStep() {
-      stepIndex++;
-      if (stepIndex < steps.length) {
-        renderStep();
+    function handleOptionClick() {
+      triggerConfetti();
+      setTimeout(() => {
+        stepIndex++;
+        if (stepIndex < steps.length) {
+          renderStep();
+        }
+      }, 600);
+    }
+    function triggerConfetti() {
+      for (let i = 0; i < 30; i++) {
+        const piece = document.createElement('div');
+        piece.className = 'confetti-piece';
+        piece.style.left = Math.random() * 100 + 'vw';
+        piece.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
+        confetti.appendChild(piece);
+        setTimeout(() => piece.remove(), 1500);
       }
     }
-
     function createHeart() {
       const heart = document.createElement('div');
       heart.className = 'heart';
@@ -185,7 +183,6 @@
       document.getElementById('hearts').appendChild(heart);
       setTimeout(() => heart.remove(), 5000);
     }
-
     startBtn.addEventListener('click', () => {
       startBtn.classList.add('hidden');
       title.classList.add('hidden');
