--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
       flex-direction: column;
       transition: background 1s ease;
     }
+
     h1, p, button {
       text-align: center;
       color: #b3003c;
     }
+
     h1 {
       font-family: 'Dancing Script', cursive;
       font-size: 2.5rem;
     }
+
     .hidden {
       display: none;
     }
+
     .hearts, .confetti {
       position: fixed;
       width: 100%;
@@ -36,17 +40,20 @@
       pointer-events: none;
       z-index: -1;
     }
+
     .heart, .confetti-piece {
       position: absolute;
       border-radius: 50%;
       animation: float 5s infinite;
     }
+
     .heart {
       width: 20px;
       height: 20px;
       background-color: red;
       transform: rotate(45deg);
     }
+
     .heart::before, .heart::after {
       content: '';
       width: 20px;
@@ -55,14 +62,17 @@
       position: absolute;
       border-radius: 50%;
     }
+
     .heart::before {
       top: -10px;
       left: 0;
     }
+
     .heart::after {
       left: -10px;
       top: 0;
     }
+
     .confetti-piece {
       width: 10px;
       height: 10px;
@@ -70,14 +80,17 @@
       opacity: 0.8;
       animation: confetti-fall 1.5s ease-out forwards;
     }
+
     @keyframes float {
       0% { transform: translateY(0) rotate(45deg); opacity: 1; }
       100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
     }
+
     @keyframes confetti-fall {
       0% { transform: translateY(0) rotate(0deg); opacity: 1; }
       100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
     }
+
     button {
       padding: 12px 24px;
       font-size: 1rem;
@@ -87,20 +100,24 @@
       cursor: pointer;
       transition: transform 0.2s, background 0.3s;
     }
+
     button:hover {
       background-color: #e6004c;
       transform: scale(1.05);
     }
+
     .question {
       max-width: 90%;
       text-align: center;
       font-size: 1.2rem;
       animation: fadeIn 0.5s ease;
     }
+
     .options button {
       display: block;
       margin: 10px auto;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -113,9 +130,11 @@
   <h1 id="title">Clique aqui para começar</h1>
   <button id="startBtn">Começar</button>
   <audio id="bgm" src="music.mp3" loop></audio>
+
   <div id="content" class="hidden">
     <div id="step"></div>
   </div>
+
   <script>
     const startBtn = document.getElementById('startBtn');
     const title = document.getElementById('title');
@@ -123,18 +142,19 @@
     const stepDiv = document.getElementById('step');
     const audio = document.getElementById('bgm');
     const confetti = document.getElementById('confetti');
+
     const steps = [
       {
-        text: `Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
-        Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?`,
+        text: \`Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
+        Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?\`,
         options: ['🍷 Vinho', '🍺 Cerveja', 'Caipirinha/Gin']
       },
       {
-        text: `Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?`,
+        text: \`Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?\`,
         options: ['Risoto de camarão', 'Nhoque ao molho de tomate e manjericão']
       },
       {
-        text: `E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?`,
+        text: \`E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?\`,
         options: ['Fondue de chocolate', '🤫 Sobremesa surpresa']
       },
       {
@@ -142,20 +162,23 @@
         options: []
       },
       {
-        text: 'Agora é só acender a vela que está na caixa e curtir o momento...<br><br><strong>Te amo! ❤️</strong><br><br><button onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">Te amo!</button>',
+        text: 'Agora é só acender a vela que está na caixa e curtir o momento...<br><br><strong>Te amo! ❤️</strong><br><br><button onclick="window.open(\'https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664\')">Te amo!</button>',
         options: []
       }
     ];
+
     let stepIndex = 0;
+
     function renderStep() {
       const step = steps[stepIndex];
-      stepDiv.innerHTML = `
-        <p class="question">${step.text}</p>
+      stepDiv.innerHTML = \`
+        <p class="question">\${step.text}</p>
         <div class="options">
-          ${step.options.map(opt => `<button onclick="handleOptionClick()">${opt}</button>`).join('')}
+          \${step.options.map(opt => \`<button onclick="handleOptionClick()">\${opt}</button>\`).join('')}
         </div>
-      `;
+      \`;
     }
+
     function handleOptionClick() {
       triggerConfetti();
       setTimeout(() => {
@@ -165,16 +188,18 @@
         }
       }, 600);
     }
+
     function triggerConfetti() {
       for (let i = 0; i < 30; i++) {
         const piece = document.createElement('div');
         piece.className = 'confetti-piece';
         piece.style.left = Math.random() * 100 + 'vw';
-        piece.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
+        piece.style.backgroundColor = \`hsl(\${Math.random() * 360}, 100%, 70%)\`;
         confetti.appendChild(piece);
         setTimeout(() => piece.remove(), 1500);
       }
     }
+
     function createHeart() {
       const heart = document.createElement('div');
       heart.className = 'heart';
@@ -183,11 +208,16 @@
       document.getElementById('hearts').appendChild(heart);
       setTimeout(() => heart.remove(), 5000);
     }
+
     startBtn.addEventListener('click', () => {
-      startBtn.classList.add('hidden');
-      title.classList.add('hidden');
+      startBtn.style.display = 'none';
+      title.style.display = 'none';
       content.classList.remove('hidden');
-      audio.play();
+
+      audio.play().catch(e => {
+        console.warn('Autoplay bloqueado:', e);
+      });
+
       renderStep();
       setInterval(createHeart, 300);
     });
