--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Surpresa de Dia dos Namorados</title>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
-    /* === SEU CSS AQUI === */
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
@@ -126,16 +125,16 @@
 
     const steps = [
       {
-        text: \`Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
-        Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?\`,
+        text: `Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
+        Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?`,
         options: ['🍷 Vinho', '🍺 Cerveja', 'Caipirinha/Gin']
       },
       {
-        text: \`Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?\`,
+        text: `Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?`,
         options: ['Risoto de camarão', 'Nhoque ao molho de tomate e manjericão']
       },
       {
-        text: \`E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?\`,
+        text: `E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?`,
         options: ['Fondue de chocolate', '🤫 Sobremesa surpresa']
       },
       {
@@ -143,7 +142,8 @@
         options: []
       },
       {
-        text: 'Agora é só acender a vela que está na caixa e curtir o momento...<br><br><strong>Te amo! ❤️</strong><br><br><button onclick="window.open(\\'https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664\\')">Te amo!</button>',
+        text: `Agora é só acender a vela que está na caixa e curtir o momento...<br><br><strong>Te amo! ❤️</strong><br><br>
+        <button onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">Te amo!</button>`,
         options: []
       }
     ];
@@ -152,12 +152,12 @@
 
     function renderStep() {
       const step = steps[stepIndex];
-      stepDiv.innerHTML = \`
-        <p class="question">\${step.text}</p>
+      stepDiv.innerHTML = `
+        <p class="question">${step.text}</p>
         <div class="options">
-          \${step.options.map(opt => \`<button onclick="handleOptionClick()">\${opt}</button>\`).join('')}
+          ${step.options.map(opt => `<button onclick="handleOptionClick()">${opt}</button>`).join('')}
         </div>
-      \`;
+      `;
     }
 
     function handleOptionClick() {
@@ -175,7 +175,7 @@
         const piece = document.createElement('div');
         piece.className = 'confetti-piece';
         piece.style.left = Math.random() * 100 + 'vw';
-        piece.style.backgroundColor = \`hsl(\${Math.random() * 360}, 100%, 70%)\`;
+        piece.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
         confetti.appendChild(piece);
         setTimeout(() => piece.remove(), 1500);
       }
