--- a/index.html
+++ b/index.html
@@ -1,235 +1,36 @@
-<!-- Substitua todo o seu HTML por esse -->
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Surpresa de Dia dos Namorados</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #fff0f3;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      transition: background 1s ease;
-    }
-    h1, p, button {
-      text-align: center;
-      color: #b3003c;
-    }
-    h1 {
-      font-family: 'Dancing Script', cursive;
-      font-size: 2.5rem;
-    }
-    .hidden { display: none; }
-    .hearts, .confetti {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: -1;
-    }
-    .heart, .confetti-piece {
-      position: absolute;
-      border-radius: 50%;
-    }
-    .heart {
-      width: 20px;
-      height: 20px;
-      background-color: red;
-      transform: rotate(45deg);
-      animation: float 6s ease-in infinite;
-    }
-    .heart::before, .heart::after {
-      content: '';
-      width: 20px;
-      height: 20px;
-      background-color: red;
-      position: absolute;
-      border-radius: 50%;
-    }
-    .heart::before { top: -10px; left: 0; }
-    .heart::after { left: -10px; top: 0; }
-    .confetti-piece {
-      width: 10px;
-      height: 10px;
-      background-color: #ff4d6d;
-      opacity: 0.8;
-      animation: confetti-fall 2.5s ease-out forwards;
-    }
-    @keyframes float {
-      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
-      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
-    }
-    @keyframes confetti-fall {
-      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-      100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
-    }
-    button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #ff4d6d;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.3s;
-    }
-    button:hover {
-      background-color: #e6004c;
-      transform: scale(1.05);
-    }
-    .question {
-      max-width: 90%;
-      text-align: center;
-      font-size: 1.2rem;
-      animation: fadeIn 1s ease;
-    }
-    .options button {
-      display: block;
-      margin: 10px auto;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    #audioBtn {
-      margin-top: 1rem;
-    }
+let selectedOptions = [];
 
-    /* Botão "Te amo" final */
-    .te-amo-btn {
-      font-size: 1.6rem;
-      padding: 20px 40px;
-      border: none;
-      border-radius: 25px;
-      background-color: #ff0055;
-      color: white;
-      cursor: pointer;
-      animation: pulse 1.5s infinite;
-      margin-top: 30px;
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
-    }
-  </style>
-</head>
-<body>
-  <div class="hearts" id="hearts"></div>
-  <div class="confetti" id="confetti"></div>
-  <h1 id="title">Clique aqui para começar</h1>
-  <button id="startBtn">Começar</button>
-  <button id="audioBtn" class="hidden">Tocar música 🎵</button>
-  <audio id="bgm" src="music.mp3" loop></audio>
+function handleOptionClick(event) {
+  const choice = event.target.innerText;
+  selectedOptions.push(choice);
+  triggerConfetti();
 
-  <div id="content" class="hidden">
-    <div id="step"></div>
-  </div>
-
-  <script>
-    const startBtn = document.getElementById('startBtn');
-    const title = document.getElementById('title');
-    const content = document.getElementById('content');
-    const stepDiv = document.getElementById('step');
-    const audio = document.getElementById('bgm');
-    const confetti = document.getElementById('confetti');
-    const audioBtn = document.getElementById('audioBtn');
-
-    const steps = [
-      {
-        text: `Primeiro abra a caixa e localize os seus vales para suas próximas opções:<br><br>
-        Para começar, pega seu <strong>vale tim tim</strong>, e me diga, o que você deseja beber hoje?`,
-        options: ['🍷 Vinho', '🍺 Cerveja', 'Caipirinha/Gin']
-      },
-      {
-        text: `Agora, pegue o seu <strong>VALE FOOD</strong> e marque qual a sua opção deliciosa pra hoje?`,
-        options: ['Risoto de camarão', 'Nhoque ao molho de tomate e manjericão']
-      },
-      {
-        text: `E por fim, com seu <strong>VALE SOBREMESA</strong>, você pode me dizer (além de mim), o que você prefere pra fechar a noite?`,
-        options: ['Fondue de chocolate', '🤫 Sobremesa surpresa']
-      }
-    ];
-
-    let stepIndex = 0;
-
-    function renderStep() {
-      const step = steps[stepIndex];
-      stepDiv.innerHTML = `
-        <p class="question">${step.text}</p>
-        <div class="options">
-          ${step.options.map(opt => `<button onclick="handleOptionClick()">${opt}</button>`).join('')}
-        </div>
-      `;
-    }
-
-    function handleOptionClick() {
-      triggerConfetti();
-      setTimeout(() => {
-        stepIndex++;
-        if (stepIndex < steps.length) {
-          renderStep();
-        } else {
-          showFinalMessage();
-        }
-      }, 1200);
-    }
-
-    function showFinalMessage() {
-      stepDiv.innerHTML = `<p class="question">Anotado!</p>`;
-      setTimeout(() => {
-        stepDiv.innerHTML = `
-          <button class="te-amo-btn" onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">
-            Te amo!
-          </button>
-        `;
-      }, 2000);
-    }
-
-    function triggerConfetti() {
-      for (let i = 0; i < 40; i++) {
-        const piece = document.createElement('div');
-        piece.className = 'confetti-piece';
-        piece.style.left = Math.random() * 100 + 'vw';
-        piece.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
-        confetti.appendChild(piece);
-        setTimeout(() => piece.remove(), 2500);
-      }
-    }
-
-    function createHeart() {
-      const heart = document.createElement('div');
-      heart.className = 'heart';
-      heart.style.left = Math.random() * 100 + 'vw';
-      heart.style.animationDuration = (Math.random() * 2 + 4) + 's';
-      document.getElementById('hearts').appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
-    }
-
-    startBtn.addEventListener('click', () => {
-      startBtn.classList.add('hidden');
-      title.classList.add('hidden');
-      content.classList.remove('hidden');
-
-      audio.play().catch(() => {
-        audioBtn.classList.remove('hidden');
-      });
-
+  setTimeout(() => {
+    stepIndex++;
+    if (stepIndex < steps.length) {
       renderStep();
-      setInterval(createHeart, 400);
-    });
+    } else {
+      showChecklist();
+    }
+  }, 1200);
+}
 
-    audioBtn.addEventListener('click', () => {
-      audio.play();
-      audioBtn.classList.add('hidden');
-    });
-  </script>
-</body>
-</html>
+function showChecklist() {
+  let checklistHTML = selectedOptions.map((opt, i) => `<li><strong>Etapa ${i + 1}:</strong> ${opt}</li>`).join('');
+  stepDiv.innerHTML = `
+    <p class="question">Anotado!</p>
+    <ul style="text-align: left; list-style: none; padding: 0; margin-top: 15px; font-size: 1rem; color: #b3003c;">
+      ${checklistHTML}
+    </ul>
+  `;
+  setTimeout(showFinalMessage, 3500);
+}
+
+function showFinalMessage() {
+  stepDiv.innerHTML = `
+    <p class="question">Agora pode acender a vela e curtir a noite...</p>
+    <button class="te-amo-btn" onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">
+      Te amo!
+    </button>
+  `;
+}
