--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
   <title>Surpresa de Dia dos Namorados</title>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
     body {
+      margin: 0;
       font-family: 'Poppins', sans-serif;
       background-color: #fff0f3;
       overflow: hidden;
@@ -20,38 +16,20 @@
       align-items: center;
       height: 100vh;
       flex-direction: column;
+      transition: background 1s ease;
       text-align: center;
-      padding: 1rem;
+      padding: 0 1rem;
+    }
+    h1, p, button {
+      color: #b3003c;
+      margin: 0.5rem 0;
     }
     h1 {
       font-family: 'Dancing Script', cursive;
       font-size: 2.5rem;
-      color: #b3003c;
-      margin-bottom: 1rem;
+      text-align: center;
     }
-    p {
-      color: #b3003c;
-      margin-bottom: 1rem;
-    }
-    button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #ff4d6d;
-      border: none;
-      border-radius: 10px;
-      color: white;
-      cursor: pointer;
-      margin: 10px auto;
-      display: block;
-      transition: transform 0.2s, background 0.3s;
-    }
-    button:hover {
-      background-color: #e6004c;
-      transform: scale(1.05);
-    }
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
     .hearts, .confetti {
       position: fixed;
       width: 100%;
@@ -80,10 +58,6 @@
     }
     .heart::before { top: -10px; left: 0; }
     .heart::after { left: -10px; top: 0; }
-    @keyframes float {
-      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
-      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
-    }
     .confetti-piece {
       width: 10px;
       height: 10px;
@@ -91,37 +65,84 @@
       opacity: 0.8;
       animation: confetti-fall 2.5s ease-out forwards;
     }
+    @keyframes float {
+      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
+      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
+    }
     @keyframes confetti-fall {
       0% { transform: translateY(0) rotate(0deg); opacity: 1; }
       100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
     }
-    #content, #step {
-      max-width: 500px;
-      width: 100%;
+    button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background-color: #ff4d6d;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+      display: block;
+      margin: 1rem auto;
+      max-width: 250px;
+    }
+    button:hover {
+      background-color: #e6004c;
+      transform: scale(1.05);
+    }
+    .question {
+      max-width: 90%;
+      margin: 0 auto 1rem auto;
+      font-size: 1.2rem;
+      animation: fadeIn 1s ease;
     }
     .options button {
-      width: 90%;
-      max-width: 300px;
+      margin: 10px auto;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    #audioBtn {
+      margin-top: 1rem;
+    }
+    /* Pulsante para botão Te amo */
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+    }
+    #finalBtn {
+      font-size: 1.5rem;
+      padding: 1rem 2rem;
+      animation: pulse 1.5s infinite;
+      margin: 1.5rem auto 0 auto;
+      display: block;
+      max-width: 250px;
+      border-radius: 15px;
+      background-color: #ff4d6d;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    #finalBtn:hover {
+      background-color: #e6004c;
+      transform: scale(1.1);
     }
     ul {
       list-style: none;
       padding: 0;
-      margin-top: 1rem;
-    }
-    li::before {
-      content: "✔️ ";
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
+      margin: 1rem auto;
+      max-width: 300px;
+      color: #b3003c;
+      font-weight: 500;
+      font-size: 1.1rem;
+      text-align: left;
     }
   </style>
 </head>
 <body>
   <div class="hearts" id="hearts"></div>
   <div class="confetti" id="confetti"></div>
-
   <h1 id="title">Clique aqui para começar</h1>
   <button id="startBtn">Começar</button>
   <button id="audioBtn" class="hidden">Tocar música 🎵</button>
@@ -157,12 +178,12 @@
     ];
 
     let stepIndex = 0;
-    let selectedOptions = [];
+    const chosenOptions = [];
 
     function renderStep() {
       const step = steps[stepIndex];
       stepDiv.innerHTML = `
-        <p>${step.text}</p>
+        <p class="question">${step.text}</p>
         <div class="options">
           ${step.options.map(opt => `<button onclick="handleOptionClick('${opt}')">${opt}</button>`).join('')}
         </div>
@@ -170,32 +191,34 @@
     }
 
     function handleOptionClick(option) {
-      selectedOptions.push(option);
+      chosenOptions.push(option);
       triggerConfetti();
       setTimeout(() => {
         stepIndex++;
         if (stepIndex < steps.length) {
           renderStep();
         } else {
-          showFinalMessage();
+          showChoices();
         }
-      }, 1000);
+      }, 1200);
     }
 
-    function showFinalMessage() {
-      stepDiv.innerHTML = `<p>Anotado!</p>`;
+    function showChoices() {
+      stepDiv.innerHTML = `<p class="question">Anotado!</p>`;
+      setTimeout(() => {
+        // Mostrar opções escolhidas
+        let listHtml = '<ul>' + chosenOptions.map(opt => `<li>${opt}</li>`).join('') + '</ul>';
+        stepDiv.innerHTML = `
+          <p class="question">Aqui está o que você escolheu:</p>
+          ${listHtml}
+        `;
+      }, 1000);
       setTimeout(() => {
         stepDiv.innerHTML = `
-          <p>Aqui está o que você escolheu:</p>
-          <ul>${selectedOptions.map(item => `<li>${item}</li>`).join('')}</ul>
+          <p>Agora pode acender a vela e curtir a noite...</p>
+          <button id="finalBtn" onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">Te amo!</button>
         `;
-        setTimeout(() => {
-          stepDiv.innerHTML = `
-            <p>Agora pode acender a vela e curtir a noite...</p>
-            <button style="font-size: 1.5rem; padding: 1rem 2rem; animation: pulse 1.5s infinite;" onclick="window.open('https://tenor.com/pt-BR/view/old-man-gif-2502981170789291664')">Te amo!</button>
-          `;
-        }, 3000);
-      }, 2000);
+      }, 7000); // 6 segundos para ler as escolhas + 1 segundo buffer
     }
 
     function triggerConfetti() {
@@ -222,9 +245,11 @@
       startBtn.classList.add('hidden');
       title.classList.add('hidden');
       content.classList.remove('hidden');
+
       audio.play().catch(() => {
         audioBtn.classList.remove('hidden');
       });
+
       renderStep();
       setInterval(createHeart, 400);
     });
